<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="diagnose.uvfree.uvfree.Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/register_about"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_user"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/reg_username"
        android:textAlignment="center"
        android:textColorHint="#9E9F9D"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/reg_password"
        android:textAlignment="center"
        android:textColorHint="#9E9F9D"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/reg_name"
        android:textAlignment="center"
        android:textColorHint="#9E9F9D"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/reg_email"
        android:textAlignment="center"
        android:textColorHint="#9E9F9D"
        android:textSize="20sp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="registerUser"
        android:text="@string/register_user_button"
        android:textSize="20sp" />


</LinearLayout>
