<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    tools:context="diagnose.uvfree.uvfree.LesionInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/time_lesion_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_timelesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/timelesion_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowtime"/>

        <RadioButton
            android:id="@+id/timelesion_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medtime"/>

        <RadioButton
            android:id="@+id/timelesion_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hightime" />

        <RadioButton
            android:id="@+id/timelesion_dontknow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontknowtime"
            android:checked="true"/>

    </RadioGroup>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nurse_comments_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nurse_comments"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="8"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:background="#ffe7e7e7"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="takeFirstPhoto"
        android:text="@string/take_first_photo_button"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>


</ScrollView>
