<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.44"
        android:paddingBottom="16dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_add_patient"
        android:layout_gravity="center"
        android:onClick="takeNewImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_patient"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="6dp"
        android:textSize="20sp" />

    <Space android:layout_width="wrap_content"
        android:layout_height="30dp" />


    <ImageButton
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_photo_queue"
        android:layout_gravity="center"
        android:onClick="photoQueue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/photo_queue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="6dp"
        android:textSize="20sp" />

    <Space android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/logout_button"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@color/mel_blue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="#ffffffff" />

</LinearLayout>

